[gd_scene load_steps=10 format=2]

[ext_resource path="res://Asset/Montserrat-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UI/SingleBoostBuy.gd" type="Script" id=2]
[ext_resource path="res://UI/FreeCoins/rect.png" type="Texture" id=3]
[ext_resource path="res://UI/FreeCoins/closebtn.png" type="Texture" id=4]
[ext_resource path="res://UI/FreeCoins/watchandcoin.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 42
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="SingleBoostBuy" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0666667, 0.0666667, 0.0666667, 0.388235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="NinePatchRect" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -320.0
margin_right = 450.0
margin_bottom = 320.0
texture = ExtResource( 3 )
patch_margin_left = 40
patch_margin_top = 38
patch_margin_right = 36
patch_margin_bottom = 38
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Window"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -368.0
margin_top = 36.0
margin_right = 333.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "POPUP_SINGLE_TITLE"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubTitle" type="Label" parent="Window"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -359.0
margin_top = 108.0
margin_right = 356.0
margin_bottom = 153.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="Window"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -82.9999
margin_top = 36.0
margin_right = -35.9999
margin_bottom = 84.0
texture_normal = ExtResource( 4 )

[node name="Description" type="Label" parent="Window"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -63.0
margin_right = 210.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "POPUP_SINGLE_DESC"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="Window"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -132.0
margin_right = 180.0
margin_bottom = -48.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Window/Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 4 )
text = "OK"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Window/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="Window/Button" to="." method="_on_Button_pressed"]
